--- a/src/app/catalogo/catalogo.component.html
+++ b/src/app/catalogo/catalogo.component.html
@@ -1,6 +1,6 @@
 <h3>
   {{titulo}}
-<h3>
+</h3>
 <nav>
   <a routerLink="/produtos"> {{produtos}}</a>
   <p></p>
@@ -9,5 +9,7 @@
   <a routerLink="/criar-produto"> {{criarProdutos}}</a>
   <p></p>
   <a routerLink="/restricao"> {{restricoes}}</a>
+  <p></p>
+  <a routerLink="/dimensoes"> {{dimensoes}}</a>
 </nav>
 <router-outlet></router-outlet>
