--- a/src/app/criar-produto/criar-produto.component.html
+++ b/src/app/criar-produto/criar-produto.component.html
@@ -4,44 +4,44 @@
 </div>
 <div style="text-align:center">
   <p>
-    <label>Descrição Produto:
-      <input #Descricao/>
+    <label>Nome Produto:
+      <input #productName />
     </label>
   </p>
+  <p>
+      <label>Descrição Produto:
+        <input #productDescription />
+      </label>
+    </p>
 <p>
-  <label>Material:
+ <!----- <label>Material:
 
-    <select name="MaterialIdEdit" (change)="adicionarMaterial($event.target.value)" class="select-width form-control">
-      <option value="-1">Escolha um valor</option>
+    <select name="selectedMaterialId" (change)="adicionarMaterial($event.target.value)" class="select-width form-control">
+      <option value="-1">Escolha um material</option>
       <option *ngFor="let mf of allMateriaisFinish" value="{{mf.materialId}}">{{mf.materialId}}
         {{mf.materialName}}</option>
     </select>
-    <!--<button (click)=" adicionarMaterial($event.target.value)">Adicionar Material</button>-->
-  </label>
+    
+  </label>--->
+  
 </p>
 <p>
   <label>Categoria:
 
-    <select name="CateogryIdEdit" (change)="addCategory($event.target.value)" class="select-width form-control">
-      <option value="-1">Escolha um valor</option>
+    <select name="selectedCategoryId" (change)="addCategory($event.target.value)" class="select-width form-control">
+      <option value="-1">Escolha uma categoria</option>
       <option *ngFor="let cat of allCategories" value="{{cat.categoryId}}">{{cat.categoryId}}
         {{cat.categoryName}}</option>
     </select>
-    <!--<button (click)=" adicionarMaterial($event.target.value)">Adicionar Material</button>-->
+    
   </label>
 </p>
+<p>
+    <button (click)=" post(productName.value,productDescription.value)">Adicionar Produto</button>
+</p>
 
-  <label> Altura:<input #DHeightE /></label>
-  <label> MinimaAlturaContinua:<input #CMinHeightE /></label>
-  <label> MaximaAlturaContinua:<input #CMaxHeightE /></label>
-  <p></p>
-  <label> Profundidade:<input #DepthE /></label>
-  <label> MinimaProfundidadeContinua:<input #CMinDepthE /></label>
-  <label> MaximaLarguraContinua:<input #CMaxDepthE /></label>
-  <p></p>
-  <label> Largura:<input #WidthE /></label>
-  <label> MinimaLarguraContinua<input #CMinWidthE /></label>
-  <label> MaximaLarguraContinua:<input #CMaxWidthE /></label>
+
+ 
  
 
 
