--- a/src/app/product-edit/product-edit.component.css
+++ b/src/app/product-edit/product-edit.component.css
@@ -26,6 +26,16 @@ h1 {
     padding: 0;
     width: 15em;
   }
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+  }
    li {
     cursor: pointer;
     position: relative;
