--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,24 +1,41 @@
 <div *ngIf="product">
-    
-    
+
+  <div style="width: 600px; float: left; margin-left: 50px">
     <h2>{{product.productName | uppercase}} Editor</h2>
-    <div><span>id: </span>{{product.productId}}</div>
+
+    <label>Name:
+      <input type="text" #NameE />
+    </label>
     <div>
-      <label>name:
-        <input [(ngModel)]="product.productName" placeholder="name"/>
+      <label>Description:
+        <input type="text" #Description>
       </label>
     </div>
-    <div>
-        <label>description:
-            <input [(ngModel)]="product.productDescription" placeholder="description"/>
-          </label>
-    </div>
-    <div>
-      <h2>SubProducts</h2>
-      <li *ngFor="let p of product.subProducts">
-        <span class="badge">{{p.productId}}  {{p.productName}}</span>
-      </li>
-    </div>
+    <button style="margin-bottom: 50px" (click)="editarProduto(product,NameE.value,Description.value)">
+        Submeter Edição
+      </button>
+    <p></p>
+    <h3>DADOS DO PRODUTO:</h3>
+    <span>DESCRICAO: </span>{{product.productDescription}}
+    <p></p>
+    <span>CATEGORIA: </span>{{product.productCategory.categoryName}}
+    <p></p>
+    <p>
+      MATERIALS:
+    </p>
+    <li *ngFor="let m of product.productMaterialWithFinish">
+      <span>{{m.materialName}}</span>
+    </li>
 
-  
+    
+
   </div>
+  <div style="align-content: center;float: left; margin-left: 50px">
+    <h2>SubProducts</h2>
+    <li *ngFor="let p of product.subProducts">
+      <span class="badge">{{p.productId}} {{p.productName}}</span>
+    </li>
+  </div>
+
+
+</div>
